AboutMeProject - ContentDescription added to yellow star

--- a/AboutMeProject/app/src/main/res/values/strings.xml
+++ b/AboutMeProject/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">About Me</string>
     <string name="jessyca">Jessyca</string>
+    <string name="yellow_star">estrela amarela</string>
 </resources>
