--- a/AboutMeProject/app/src/main/res/values-night/strings.xml
+++ b/AboutMeProject/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">About Me</string>
+    <string name="jessyca">Jessyca</string>
     <string name="yellow_star">estrela amarela</string>
+    <string name="bio_text">Mussum Ipsum, cacilds vidis litro abertis. Per aumento de cachacis, eu reclamis. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi.</string>
 </resources>
