--- a/ColorMyViews/app/src/main/res/values/strings.xml
+++ b/ColorMyViews/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="box_three">Box Three</string>
     <string name="box_five">Box Five</string>
     <string name="box_four">Box Four</string>
+    <string name="red">Red</string>
+    <string name="yellow">Yellow</string>
+    <string name="green">Green</string>
 </resources>
