--- a/WhatDidILearn/app/src/main/res/values-night/strings.xml
+++ b/WhatDidILearn/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="item_description">Item Description:</string>
     <string name="hint_description">description</string>
     <string name="btn_save">Save</string>
+    <string name="btn_x">x</string>
 </resources>
